# elections

./: .env.example  .gitignore  10th.yaml  11th.yaml  6th.yaml  7th.yaml  8th.yaml  9th.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.sh  candidates.yaml  candidates0.yaml  election_types.yaml  main.py  party-list-legislator-successor.yaml  process_birthday.py  pyproject.toml
_data/mayor/: 103年直轄市長選舉.xlsx  103年縣市長選舉.xlsx  107年直轄市長選舉.xlsx  107年縣市長選舉.xlsx  109年直轄市長_補選.xlsx  111年直轄市長選舉.xlsx  111年縣市長選舉.xlsx  111年縣市長選舉_重選.xlsx  83年直轄市長選舉.xlsx  86年縣市長選舉.xlsx  87年直轄市長選舉.xlsx  90年縣市長選舉.xlsx  91年直轄市長選舉.xlsx  94年縣市長選舉.xlsx  95年直轄市長選舉.xlsx  98年縣市長選舉.xlsx  99年直轄市長選舉.xlsx
_data/president/: 第09任總統副總統選舉.xlsx  第10任總統副總統選舉.xlsx  第11任總統副總統選舉.xlsx  第12任總統副總統選舉.xlsx  第13任總統副總統選舉.xlsx  第14任總統副總統選舉.xlsx  第15任總統副總統選舉.xlsx  第16任總統副總統選舉.xlsx
db/: 001_init.sql  002_cleanup.sql
docs/: data-exceptions.md  db-schema.md  mockup.html  special-name-cases.md  voter-guide-scraper-spec.md
src/: fetch_council.py  fetch_councilor.py  fetch_indigenous.py  fetch_legislator.py  fetch_legislator_by_election.py  fetch_province_councilor.py  fetch_township.py  fetch_village.py  fetch_voter_guide.py  merge.py  normalize.py  parse_councilor.py  parse_indigenous.py  parse_legislator.py  parse_legislator_by_election.py  parse_mayor.py  parse_president.py  parse_township.py  parse_village.py  session_years.py  validate.py
src/webapp/: app.py  build_candidates.py  bulletin.py  discovery.py  matching.py  (+4 more)
tests/: conftest.py  test_merge.py  test_parse_mayor.py  test_parse_president.py  test_validate.py
(+280 files in other folders)
