[project]
name = "elections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.2.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["src/webapp/static/*"]
